gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: librechat-gateway
  namespace: paula-test
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - librechat2.kubernetes.coe.local
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: librechat-tls
    - hosts:
        - librechat2.kubernetes.coe.local
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
